Förbättra prestanda: async font-loading, förbättrad error handling, optimerad caching

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <!-- Preload kritisk font-fil för att undvika CLS -->
     <link rel="preload" as="font" type="font/woff2" crossorigin href="https://fonts.gstatic.com/s/inter/v20/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa1ZL7.woff2" />
 
-    <!-- Ladda Inter font asynkront för att inte blockera rendering -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'" />
+    <!-- Ladda Inter font med font-display: swap - ladda asynkront för att inte blockera -->
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'; this.onload=null;" />
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" /></noscript>
 
     <link rel="icon" type="image/svg+xml" href="/pag/favicon.svg" />
