Clean up repository: remove internal files, tests, and add bilingual README

--- a/index.html
+++ b/index.html
@@ -19,9 +19,65 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" /></noscript>
 
     <link rel="icon" type="image/svg+xml" href="/pag/favicon.svg" />
-    <meta name="description" content="Se alla evenemang på arenorna i Globenområdet - Avicii Arena, 3Arena, Hovet, Annexet. Konserter, hockey, shower och mer." />
-    <title>På G i Globenområdet</title>
+
+    <!-- Primary Meta Tags -->
+    <title>På G i Globenområdet - Evenemang på Avicii Arena, 3Arena, Hovet & Annexet</title>
+    <meta name="title" content="På G i Globenområdet - Evenemang på Avicii Arena, 3Arena, Hovet & Annexet" />
+    <meta name="description" content="Se alla evenemang på arenorna i Globenområdet - Avicii Arena, 3Arena, Hovet, Annexet. Konserter, hockey, shower och mer. Uppdateras automatiskt var 4:e timme." />
+    <meta name="keywords" content="Globen, Avicii Arena, 3Arena, Hovet, Annexet, evenemang Stockholm, konserter, hockey, events, Stockholm Live" />
+    <meta name="author" content="På G i Globenområdet" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Swedish" />
+    <meta name="revisit-after" content="4 hours" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mackan.eu/pag/" />
+    <meta property="og:title" content="På G i Globenområdet - Evenemang på Avicii Arena, 3Arena, Hovet & Annexet" />
+    <meta property="og:description" content="Se alla evenemang på arenorna i Globenområdet. Konserter, hockey, shower och mer. Uppdateras automatiskt var 4:e timme." />
+    <meta property="og:locale" content="sv_SE" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mackan.eu/pag/" />
+    <meta property="twitter:title" content="På G i Globenområdet - Evenemang på Avicii Arena, 3Arena, Hovet & Annexet" />
+    <meta property="twitter:description" content="Se alla evenemang på arenorna i Globenområdet. Konserter, hockey, shower och mer." />
+
+    <!-- RSS Feeds -->
+    <link rel="alternate" type="application/rss+xml" title="På G - Idag" href="/pag/rss-today.xml" />
+    <link rel="alternate" type="application/rss+xml" title="På G - Imorgon" href="/pag/rss-tomorrow.xml" />
+    <link rel="alternate" type="application/rss+xml" title="På G - Denna vecka" href="/pag/rss-week.xml" />
     <link rel="alternate" type="application/rss+xml" title="På G - Kommande evenemang" href="/pag/rss-upcoming.xml" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://mackan.eu/pag/" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "På G i Globenområdet",
+      "url": "https://mackan.eu/pag/",
+      "description": "Se alla evenemang på arenorna i Globenområdet - Avicii Arena, 3Arena, Hovet, Annexet",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://mackan.eu/pag/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "På G i Globenområdet",
+      "url": "https://mackan.eu/pag/",
+      "sameAs": [
+        "https://github.com/retea-se/pag"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
